squashing bugs

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -161,6 +161,7 @@ body {
 }
 
 .nav {
+  position: fixed;
   padding: auto;
   background-color: black;
   height: 100px;
